--- a/source/css/style.css
+++ b/source/css/style.css
@@ -264,6 +264,7 @@ footer a {
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.35);
     transition: all 0.3s ease 0s;
     min-width: 250px;
+    cursor: pointer;
 }
 
 .mediaButtonsProjects button:hover {
